# HafezInDiscord

./: CMakeLists.txt  README.md  hafez.cpp  hafez.hpp  main.cpp
